# minimum-cut-serial-parallel

./: .gitignore  CMakeLists.txt  Makefile  Notebook.nb  debug.txt  job.sh  notebook.ipynb  parallel_job.sh  serial_job.sh
src/: ArgGetter.cpp  Configuration.cpp  Problem.cpp  Solution.cpp  main.cpp
src/headers/: ArgGetter.h  Configuration.h  Problem.h  Solution.h
src/solvers/: Asolver.cpp  BBSolver.cpp  MasterBBSolver.cpp  SlaveBBSolver.cpp
src/solvers/headers/: ASolver.h  BBSolver.h  MasterBBSolver.h  SlaveBBSolver.h
